--- a/deployment/production/docker/django_geosafe/Dockerfile
+++ b/deployment/production/docker/django_geosafe/Dockerfile
@@ -1,10 +1,10 @@
 ARG GEONODE_DJANGO_QGIS_SERVER_TAG=latest
-FROM kartoza/geonode_django_qgis-server:${GEONODE_DJANGO_QGIS_SERVER_TAG}
+FROM vasuse7en/geonode_django_qgis-server:${GEONODE_DJANGO_QGIS_SERVER_TAG}
 
 # Clone source code
 WORKDIR /usr/src
 ARG GEOSAFE_TAG=2.6.x
-RUN git clone --branch ${GEOSAFE_TAG} --depth 1 https://github.com/kartoza/geosafe.git
+RUN git clone --branch ${GEOSAFE_TAG} --depth 1 https://github.com/vasuse7en/geosafe.git
 
 WORKDIR /usr/src/app
 
